--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ./src --ext .js,.ts,.tsx",
+    "lint-fix": "npm run lint -- --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -16,14 +17,25 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-cookie-consent": "^7.4.1",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "tslint": "^6.1.3"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.4",
-    "eslint": "8.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
     "eslint-config-next": "12.1.6",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "4.6.4"
   }
 }
