--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.8.0",
+    "@mui/material": "^5.8.2",
+    "@mui/styles": "^5.8.0",
     "iron-session": "^6.1.3",
     "next": "12.1.6",
     "react": "18.1.0",
