--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.0",
+    "i18next": "^21.8.9",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "iron-session": "^6.1.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-cookie-consent": "^7.4.1",
     "react-dom": "18.1.0",
+    "react-i18next": "^11.17.1",
     "tslint": "^6.1.3"
   },
   "devDependencies": {
